<package format="2">
  <name>planner</name>
  <version>1.2.4</version>
  <description> This package provides path planning on a grid map. </description>

  <author>Aykut Onol</author>
  <maintainer email="aonol@ece.neu.edu">Aykut Onol</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
</package>
